# terraform-modules-interface

./: README.md  pyproject.toml
terraform_modules_interface/: defaults.py  interface.py  terraform_module_parameter.py  terraform_module_resources.py  terraform_remote_module_variables.py
